# capy

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_flags.txt
contrib/: Dockerfile
contrib/lldb/: capy.lldb
contrib/vscode/: launch.json  tasks.json
examples/: echo.c
extra/: request.sh
extra/go/: main.go
extra/lldb/: capy.lldb
extra/vegeta/: targets
include/capy/: arena.h  assert.h  base64.h  buffer.h  capy.h  error.h  hash.h  http.h  json.h  logs.h  macros.h  math.h  smap.h  std.h  string.h  strmap.h  test.h  uri.h  vec.h
lldb/: capy.lldb  capy.py
src/: arena.c  arena_linux.c  assert.c  base64.c  buffer.c  capy.c  capy.h  capy_linux.h  coroutines.c  error.c  error_linux.c  hash.c  http.c  http_linux.c  http_linux_et.c  json.c  logs.c  map.c  math.c  smap.c  string.c  strmap.c  symbols.c  task.c  task_linux.c  task_linux_amd64.c  tcp.c  uri.c  utils.c  vec.c
tests/: arena_test.c  base64_test.c  buffer_test.c  error_test.c  http_test.c  json_test.c  smap_test.c  string_test.c  strmap_test.c  symbols_test.c  task_test.c  test.c  test.h  test_api.c  uri_test.c  vec_test.c
